Refactor to mimic the lnd rest API a bit

--- a/examples/tipping.html
+++ b/examples/tipping.html
@@ -5,8 +5,8 @@
     <title></title>
 	</head>
 	<body>
-    <script src="http://localhost:1323/static/lntip.js" lntip-host="http://localhost:1323"></script>
+    <script lntip-host="http://localhost:1323" src="http://localhost:1323/static/lntip.js" id="lntip-script"></script>
 
-    <a href="#" onclick="javascript:new LnTip(1000, 'thanks');return false;">Tip me</a>
+    <a href="#" onclick="javascript:new LnTip({ value: 1000, memo: 'thanks' }).request();return false;">Tip me</a>
 	</body>
 </html>
