--- a/files/root/index.html
+++ b/files/root/index.html
@@ -108,7 +108,7 @@
           <input type="text" class="memo" id="memo" placeholder="message" autocomplete="off">
         </p>
         <button id="send-button">
-          Send
+          ⚡ Send ⚡
         </button>
         <p id="onchain" class="note">
           <a href="#" id="get-new-address" class="onchain">Prefer onchain Bitcoin? Click here!</a>
