--- a/files/root/index.html
+++ b/files/root/index.html
@@ -107,9 +107,9 @@
           <br>
           <input type="text" class="memo" id="memo" placeholder="message" autocomplete="off">
         </p>
-        <button id="send-button">
-          ⚡ Send ⚡
-        </button>
+
+        <button id="send-button">⚡ Send ⚡</button>
+
         <p id="onchain" class="note">
           <a href="#" id="get-new-address" class="onchain">Prefer onchain Bitcoin? Click here!</a>
         </p>
@@ -123,6 +123,7 @@
             </div>
           </div>
         </div>
+
         <div id="loader" style="display:none">
           <svg version="1.1" id="loader-1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="40px" height="40px" viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
             <path fill="#000" d="M43.935,25.145c0-10.318-8.364-18.683-18.683-18.683c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615c8.072,0,14.615,6.543,14.615,14.615H43.935z">
@@ -135,7 +136,6 @@
 
     <script src="/lnme/lnme.js" id="lnme-script"></script>
     <script>
-
       document.getElementById("get-new-address").addEventListener('click', function(e) {
         e.preventDefault();
         var lnme = new LnMe({});
