--- a/files/root/index.html
+++ b/files/root/index.html
@@ -54,6 +54,13 @@
         color: #fff;
         opacity: 0.3;
       }
+      input[type=number] {
+        -moz-appearance: textfield;
+      }
+      input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+      }
       input.amount {
         width: 300px;
       }
