--- a/examples/tipping.html
+++ b/examples/tipping.html
@@ -5,10 +5,10 @@
     <title>LnMe</title>
   </head>
   <body>
-    
-    <script data-lnme-base-url="http://localhost:1323" src="http://localhost:1323/static/lntip.js" id="lntip-script"></script>
 
-    <a href="#" onclick="javascript:new LnTip({ value: 1000, memo: 'thanks' }).request();return false;">
+    <script data-lnme-base-url="https://lnme.michaelbumann.com" src="https://lnme.michaelbumann.com/lnme/lnme.js"></script>
+
+    <a href="#" onclick="javascript:new LnMe({ value: 100, memo: 'Thanks!' }).request();return false;">
       Send me some sats
     </a>
 
