--- a/files/root/index.html
+++ b/files/root/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8">
     <title>⚡ Send me some Sats</title>
-    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;700&display=swap" rel="stylesheet" />
     <style>
       html {
         width: 100%;
@@ -12,7 +11,7 @@
       }
       body {
         background-image: linear-gradient(60deg, #3d3393 0%, #2b76b9 37%, #2cacd1 65%, #35eb93 100%);
-        font-family: 'Source Code Pro', monospace;
+        font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
       }
       .wrapper {
         font-weight: 400;
