Improve scanability fo QR code
My camera had issues with the colored background. Adding this css helped.

--- a/files/root/index.html
+++ b/files/root/index.html
@@ -89,6 +89,10 @@
         width: 100%;
         white-space: nowrap;
       }
+      .lnme-qrcode > canvas {
+        border: 5px solid #fff;
+        background: #fff;
+      }
       .lnme-details {
         text-overflow: ellipsis;
         overflow: hidden;
