Add icon to readme and favicon to generated code, fixes #28

--- a/files/root/index.html
+++ b/files/root/index.html
@@ -6,9 +6,9 @@
     <meta property="og:site_name" content="">
     <meta property="og:description" content="">
 
-    <meta property="og:image" content="/lnme/zap.svg">
+    <meta property="og:image" content="/lnme/icon.svg">
 
-    <title>⚡ Send me some Sats</title>
+    <title>Send me some Sats</title>
     <style>
       html {
         width: 100%;
@@ -111,6 +111,7 @@
         cursor: pointer;
       }
     </style>
+    <link rel="icon" type="image/svg+xml" href="/lnme/favicon.svg" />
   </head>
   <body>
     <div class="wrapper">
